# StellarSwipe-Contract

./: README.md
.github/workflows/: ci.yml
docs/: PR_TRADE_HISTORY_PORTFOLIO.md
stellar-swipe/: Cargo.toml
stellar-swipe/contracts/auto_trade/src/: error.rs  history.rs  lib.rs  multi_asset.rs  portfolio.rs  sdex.rs  storage.rs  test.rs
stellar-swipe/contracts/auto_trade/test_snapshots/test/: test_execute_trade_insufficient_balance.1.json  test_execute_trade_limit_filled.1.json  test_execute_trade_limit_not_filled.1.json  test_execute_trade_market_full_fill.1.json  test_execute_trade_market_partial_fill.1.json  test_execute_trade_signal_expired.1.json  test_execute_trade_signal_not_found.1.json  test_execute_trade_unauthorized.1.json  test_get_trade_existing.1.json
stellar-swipe/contracts/common/: Cargo.toml
stellar-swipe/contracts/common/src/: assets.rs  lib.rs
stellar-swipe/contracts/fee_collector/src/: lib.rs
stellar-swipe/contracts/fee_collector/src/tests/: property_tests.rs
stellar-swipe/contracts/oracle/: Cargo.toml  Makefile  README.md
stellar-swipe/contracts/oracle/src/: errors.rs  lib.rs  multi_hop.rs  staleness.rs  types.rs
stellar-swipe/contracts/signal_registry/src/: analytics.rs  error.rs  errors.rs  events.rs  expiry.rs  leaderboard.rs  lib.rs  performance.rs  query.rs  stake.rs  submission.rs  templates.rs  test.rs  test_performance.rs  types.rs
stellar-swipe/contracts/stellar-swipe/src/: lib.rs  test.rs  types.rs
